# alpaka_tutorial

./: CMakeLists.txt  README.md  indices.cpp  main.cpp  types.hpp
cpp/: basic.cpp  indices.cpp  kernels.cpp  shallow_copy.cpp
hpp/: alpaka_tutorial.hpp  basic_typedefs.hpp  config.hpp  constants.hpp  typedefs.hpp  work_division.hpp
